--- a/resources/assets/sass/ssr-nl.scss
+++ b/resources/assets/sass/ssr-nl.scss
@@ -208,6 +208,7 @@ margin-left: -131px;
 }
 
 .footerPagenumber {
+  margin-top: 4em;
   font-family: "Proximus-Regular", "Courier New", Courier, monospace;
   font-size: 9px;
   float: right;
